# policy-preferences-editor-prototype

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Doxyfile  INSTALL.md  README.md
.gear/: rules  (+1 more)
src/app/: CMakeLists.txt  main.cpp
src/apps/mvvm-folders/: CMakeLists.txt  commonitem.cpp  commonitem.h  commonutils.cpp  commonutils.h  commonview.cpp  commonview.h  commonview.ui  foldercontaineritem.cpp  foldercontaineritem.h  folderitem.cpp  folderitem.h  folderitemcontroller.cpp  folderitemcontroller.h  foldersview.ui  folderview.cpp  folderview.h  folderviewslots.cpp  main.cpp  mainwindow.cpp  mainwindow.h  preferencestreemodel.cpp  preferencestreemodel.h  preferencestreeproxymodel.cpp  preferencestreeproxymodel.h  preferenceswidget.cpp  preferenceswidget.h  preferenceswidget.ui
src/apps/mvvm-folders/attributes/: attributesitem.cpp  attributesitem.h
src/apps/mvvm-folders/common/: basemodelbuilder.cpp  basemodelbuilder.h  basepreferenceitem.h  basepreferencereader.cpp  basepreferencereader.h  basepreferencewidget.cpp  basepreferencewidget.h  commonitem.cpp  commonitem.h  commonutils.h  commonview.cpp  commonview.h  preferencecategoryitem.cpp  preferencecategoryitem.h  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  preferencesmodel.cpp  preferencesmodel.h  propertieswidget.cpp  propertieswidget.h  propertieswidget.ui  tabledetailswidget.cpp  tabledetailswidget.h  tabledetailswidget.ui  widgetfactory.cpp  widgetfactory.h
src/apps/mvvm-folders/datasource/: datasourcecontaineritem.cpp  datasourcecontaineritem.h  datasourceitem.cpp  datasourceitem.h  datasourcemodelbuilder.cpp  datasourcemodelbuilder.h  datasourcewidget.cpp  datasourcewidget.h  datasourcewidget.ui  datasourcewidgetslots.cpp
src/apps/mvvm-folders/device/: devicecontaineritem.cpp  devicecontaineritem.h  deviceitem.cpp  deviceitem.h  devicemodelbuilder.cpp  devicemodelbuilder.h  devicewidget.cpp  devicewidget.h  devicewidget.ui
src/apps/mvvm-folders/drives/: drivescontaineritem.cpp  drivescontaineritem.h  drivesitem.cpp  drivesitem.h  drivesmodelbuilder.cpp  drivesmodelbuilder.h  driveswidget.cpp  driveswidget.h  driveswidget.ui  driveswidgetslots.cpp
src/apps/mvvm-folders/files/: filescontaineritem.cpp  filescontaineritem.h  filesitem.cpp  filesitem.h  filesmodelbuilder.cpp  filesmodelbuilder.h  filespreferencereader.cpp  filespreferencereader.h  fileswidget.cpp  fileswidget.h  fileswidget.ui  fileswidgetslots.cpp
src/apps/mvvm-folders/folder_options/: fileextensionactionitem.cpp  fileextensionactionitem.h  fileextensioncontaineritem.cpp  fileextensioncontaineritem.h  fileextensionitem.cpp  fileextensionitem.h  fileextensionwidget.cpp  fileextensionwidget.h  fileextensionwidget.ui  folderoptionscontaineritem.h  folderoptionscontaineritem.inl  folderoptionsitem.cpp  folderoptionsitem.h  folderoptionsmodelbuilder.cpp  folderoptionsmodelbuilder.h  folderoptionsvistacontaineritem.h  folderoptionsvistacontaineritem.inl  folderoptionsvistaitem.cpp  folderoptionsvistaitem.h  folderoptionsvistawidget.ui  folderoptionswidget.cpp  folderoptionswidget.h  openwhithwidget.ui  openwithitem.cpp  openwithitem.h  openwithwidget.cpp  openwithwidget.h  openwithwidget.ui  openwithwidgetslots.cpp
src/apps/mvvm-folders/folderoptions/: folderoptionswidget.ui
src/core/: CMakeLists.txt  abstractcompositesnapin.cpp  abstractcompositesnapin.h  abstractsnapin.cpp  abstractsnapin.h  common.h  compositesnapindetailsdialog.cpp  compositesnapindetailsdialog.h  compositesnapindetailsdialog.ui  core.cpp  core.h  factory.h  icompositesnapin.h  isnapin.h  isnapindetailsdialog.h  isnapinmanager.h  model.cpp  model.h  plugin.cpp  plugin.h  pluginstorage.cpp  pluginstorage.h  snapindetailsdialog.cpp  snapindetailsdialog.h  snapindetailsdialog.ui  snapindetailsfactory.cpp  snapindetailsfactory.h  snapindetailswidget.cpp  snapindetailswidget.h  snapinloader.cpp  snapinloader.h  snapinmanagementsettings.h  snapinmanagementwidget.cpp  snapinmanagementwidget.h  snapinmanager.cpp  snapinmanager.h
src/gui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  commandlineoptions.h  commandlineparser.cpp  commandlineparser.h  concatenatetreesproxymodel.cpp  concatenatetreesproxymodel.h  concatenatetreesproxymodel_p.cpp  concatenatetreesproxymodel_p.h  editorpreferencesdialog.cpp  editorpreferencesdialog.h  editorpreferencesdialog.ui  filedialogutils.cpp  filedialogutils.h  gui.cpp  gui.h  icon.qrc  listboxdialog.cpp  listboxdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowsettings.cpp  mainwindowsettings.h  treevieweventfilter.cpp  treevieweventfilter.h
src/gui/i18n/: gui_en.ts  gui_ru.ts
src/io/: CMakeLists.txt  genericfile.h  genericreader.h  genericreader.inl  inifile.h  io.cpp  io.h  policydefinitionsfile.cpp  policydefinitionsfile.h  policyfileformat.h  policyresourcesfile.cpp  policyresourcesfile.h  registryfileformat.h
src/plugins/: CMakeLists.txt
src/plugins/administrative_templates/: CMakeLists.txt  administrativetemplatesplugin.cpp  administrativetemplatessnapin.cpp  administrativetemplatessnapin.h  pluginstorage.cpp
src/plugins/adml/: CMakeLists.txt  admlformat.cpp  admlformat.h  admlplugin.cpp
src/plugins/admx/: CMakeLists.txt  admxformat.cpp  admxformat.h  admxplugin.cpp
src/plugins/common/: CMakeLists.txt  exceptionhandler.cpp  exceptionhandler.h
src/plugins/ini/: CMakeLists.txt  iniformat.cpp  iniformat.h  iniplugin.cpp
src/plugins/preferences/: CMakeLists.txt  modelcreator.cpp  modelcreator.h  preferencesplugin.cpp  preferencessnapin.cpp  preferencessnapin.h
src/plugins/scripts/: CMakeLists.txt  addscriptwidget.ui  scriptsdialog.ui  scriptsplugin.cpp  scriptspowershellwidget.cpp  scriptspowershellwidget.h  scriptspowershellwidget.ui  scriptssnapin.cpp  scriptssnapin.h  scriptswidget.h  scriptswidget.ui
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt
tests/auto/apps/: CMakeLists.txt
tests/auto/gui/: CMakeLists.txt
tests/auto/io/: CMakeLists.txt
tests/auto/plugins/: CMakeLists.txt
tests/data/: environmentvariables.xml  folders.xml  printers.xml
(+2729 files in other folders)
